{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 709,
  "lineage": "787ffd29-8a1d-d5ff-13b2-181b872782e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main_eip-for-nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7e38ab135523fe2",
            "association_id": "eipassoc-092965709a431436b",
            "domain": "vpc",
            "id": "eipalloc-0e7e38ab135523fe2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09f92da48dbdefd5a",
            "private_dns": "ip-11-0-0-223.ec2.internal",
            "private_ip": "11.0.0.223",
            "public_dns": "ec2-3-208-240-196.compute-1.amazonaws.com",
            "public_ip": "3.208.240.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP 1"
            },
            "tags_all": {
              "Name": "EIP 1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main_eip-for-nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045310d24708cbbc0",
            "association_id": "eipassoc-0e85c282f37db9d46",
            "domain": "vpc",
            "id": "eipalloc-045310d24708cbbc0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06c4614becf824b36",
            "private_dns": "ip-11-0-1-145.ec2.internal",
            "private_ip": "11.0.1.145",
            "public_dns": "ec2-34-204-104-25.compute-1.amazonaws.com",
            "public_ip": "34.204.104.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP 2"
            },
            "tags_all": {
              "Name": "EIP 2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main_app_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:568170370118:instance/i-0d6e059c2c8ef1586",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6e059c2c8ef1586",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newlycreated1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0351f9c888d348041",
            "private_dns": "ip-11-0-3-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.3.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d36df50cbf6de159",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df42857832a7eba0",
            "tags": {
              "Name": "appserver for techmax"
            },
            "tags_all": {
              "Name": "appserver for techmax"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03278cd11d743d0a3"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_subnet.main_privatesubnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main_app_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:568170370118:instance/i-00b90fbe16db8bc39",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b90fbe16db8bc39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newlycreated1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03ea4f730d751a775",
            "private_dns": "ip-11-0-4-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.4.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07b41a5af5e5fa2f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6eba3d1296c2ed7",
            "tags": {
              "Name": "appserver for techmax"
            },
            "tags_all": {
              "Name": "appserver for techmax"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03278cd11d743d0a3"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_subnet.main_privatesubnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main_web_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:568170370118:instance/i-044ae30243cdf039a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044ae30243cdf039a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newlycreated1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b5d4a6c9cfca7a9",
            "private_dns": "ip-11-0-0-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.0.169",
            "public_ip": "44.202.213.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf35109d3632034c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015943f9c175dfd85",
            "tags": {
              "Name": "webserver for techmax"
            },
            "tags_all": {
              "Name": "webserver for techmax"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033cc65ce0a65dad6"
            ]
          },
          "dependencies": [
            "aws_security_group.main_webserver-security-group",
            "aws_subnet.main_publicsubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main_web_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:568170370118:instance/i-0bd0c19bd495e818b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd0c19bd495e818b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newlycreated1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-094bfb53fe15026d2",
            "private_dns": "ip-11-0-1-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.73",
            "public_ip": "54.165.235.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e865b5ed43cf940a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f0e12ef4111d224",
            "tags": {
              "Name": "webserver for techmax"
            },
            "tags_all": {
              "Name": "webserver for techmax"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033cc65ce0a65dad6"
            ]
          },
          "dependencies": [
            "aws_security_group.main_webserver-security-group",
            "aws_subnet.main_publicsubnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:internet-gateway/igw-0e0456ea9ccddee28",
            "id": "igw-0e0456ea9ccddee28",
            "owner_id": "568170370118",
            "tags": {
              "Name": "DEV-internet-gateway"
            },
            "tags_all": {
              "Name": "DEV-internet-gateway"
            },
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7e38ab135523fe2",
            "connectivity_type": "public",
            "id": "nat-03c69d3ca76a861af",
            "network_interface_id": "eni-09f92da48dbdefd5a",
            "private_ip": "11.0.0.223",
            "public_ip": "3.208.240.196",
            "subnet_id": "subnet-015943f9c175dfd85",
            "tags": {
              "Name": "Nat Gateway Public Subnet 1"
            },
            "tags_all": {
              "Name": "Nat Gateway Public Subnet 1"
            }
          },
          "dependencies": [
            "aws_eip.main_eip-for-nat-gateway-1",
            "aws_subnet.main_publicsubnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045310d24708cbbc0",
            "connectivity_type": "public",
            "id": "nat-01acbbb47d7789555",
            "network_interface_id": "eni-06c4614becf824b36",
            "private_ip": "11.0.1.145",
            "public_ip": "34.204.104.25",
            "subnet_id": "subnet-05f0e12ef4111d224",
            "tags": {
              "Name": "Nat Gateway Public Subnet 2"
            },
            "tags_all": {
              "Name": "Nat Gateway Public Subnet 2"
            }
          },
          "dependencies": [
            "aws_eip.main_eip-for-nat-gateway-2",
            "aws_subnet.main_publicsubnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:network-interface/eni-0bcfe87eb6e4ee751",
            "id": "eni-0bcfe87eb6e4ee751",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:20:e4:88:6c:79",
            "owner_id": "568170370118",
            "private_ip": "11.0.0.61",
            "private_ip_list": [
              "11.0.0.61"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "11.0.0.61"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0377eca39734f5554"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015943f9c175dfd85",
            "tags": {
              "Name": "main_network_interface"
            },
            "tags_all": {
              "Name": "main_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.main_publicsubnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:network-interface/eni-0a48b52c90f90bd74",
            "id": "eni-0a48b52c90f90bd74",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:ca:6f:9f:7c:cd",
            "owner_id": "568170370118",
            "private_ip": "11.0.1.94",
            "private_ip_list": [
              "11.0.1.94"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "11.0.1.94"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0377eca39734f5554"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f0e12ef4111d224",
            "tags": {
              "Name": "main_network_interface"
            },
            "tags_all": {
              "Name": "main_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.main_publicsubnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:network-interface/eni-0c01f4269b83cf725",
            "id": "eni-0c01f4269b83cf725",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e2:a8:43:7f:6d",
            "owner_id": "568170370118",
            "private_ip": "11.0.3.4",
            "private_ip_list": [
              "11.0.3.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "11.0.3.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0377eca39734f5554"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df42857832a7eba0",
            "tags": {
              "Name": "main_network_interface"
            },
            "tags_all": {
              "Name": "main_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.main_privatesubnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:network-interface/eni-088997f377e06c0d7",
            "id": "eni-088997f377e06c0d7",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:0c:5c:17:25:79",
            "owner_id": "568170370118",
            "private_ip": "11.0.4.135",
            "private_ip_list": [
              "11.0.4.135"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "11.0.4.135"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0377eca39734f5554"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6eba3d1296c2ed7",
            "tags": {
              "Name": "main_network_interface"
            },
            "tags_all": {
              "Name": "main_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.main_privatesubnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:route-table/rtb-0d42aa6b2d3f28fb5",
            "id": "rtb-0d42aa6b2d3f28fb5",
            "owner_id": "568170370118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0456ea9ccddee28",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-Internetgtway-routetable"
            },
            "tags_all": {
              "Name": "DEV-Internetgtway-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_internet_gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:route-table/rtb-0e3a9ca449aaadbbc",
            "id": "rtb-0e3a9ca449aaadbbc",
            "owner_id": "568170370118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03c69d3ca76a861af",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1"
            },
            "tags_all": {
              "Name": "Private Route Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main_eip-for-nat-gateway-1",
            "aws_nat_gateway.main_nat-gateway-1",
            "aws_subnet.main_publicsubnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_private-route-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:route-table/rtb-083a2fd2486ea65b3",
            "id": "rtb-083a2fd2486ea65b3",
            "owner_id": "568170370118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01acbbb47d7789555",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 2"
            },
            "tags_all": {
              "Name": "Private Route Table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main_eip-for-nat-gateway-2",
            "aws_nat_gateway.main_nat-gateway-2",
            "aws_subnet.main_publicsubnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_privatesubnet1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6b957b6dfdf68da",
            "route_table_id": "rtb-0e3a9ca449aaadbbc",
            "subnet_id": "subnet-0df42857832a7eba0"
          },
          "dependencies": [
            "aws_eip.main_eip-for-nat-gateway-1",
            "aws_nat_gateway.main_nat-gateway-1",
            "aws_route_table.main_private-route-table-1",
            "aws_subnet.main_privatesubnet1",
            "aws_subnet.main_publicsubnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_privatesubnet2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062411593eb3835e7",
            "route_table_id": "rtb-0e3a9ca449aaadbbc",
            "subnet_id": "subnet-0a6eba3d1296c2ed7"
          },
          "dependencies": [
            "aws_eip.main_eip-for-nat-gateway-1",
            "aws_nat_gateway.main_nat-gateway-1",
            "aws_route_table.main_private-route-table-1",
            "aws_subnet.main_privatesubnet2",
            "aws_subnet.main_publicsubnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cf39d3363126875",
            "route_table_id": "rtb-0d42aa6b2d3f28fb5",
            "subnet_id": "subnet-015943f9c175dfd85"
          },
          "dependencies": [
            "aws_internet_gateway.main_internet_gw",
            "aws_route_table.main_internet_gw",
            "aws_subnet.main_publicsubnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f235b0e67f7ad80",
            "route_table_id": "rtb-0d42aa6b2d3f28fb5",
            "subnet_id": "subnet-05f0e12ef4111d224"
          },
          "dependencies": [
            "aws_internet_gateway.main_internet_gw",
            "aws_route_table.main_internet_gw",
            "aws_subnet.main_publicsubnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:security-group/sg-04dfea612898a4a96",
            "description": "Enable HTTP/HTTPS access on Port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dfea612898a4a96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "568170370118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB Security Group"
            },
            "tags_all": {
              "Name": "ALB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:security-group/sg-033cc65ce0a65dad6",
            "description": "allow access on ports 80 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033cc65ce0a65dad6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "568170370118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2 security group"
            },
            "tags_all": {
              "Name": "ec2 security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:security-group/sg-03278cd11d743d0a3",
            "description": "Enable SSH access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03278cd11d743d0a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Security Group",
            "name_prefix": "",
            "owner_id": "568170370118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Security Group"
            },
            "tags_all": {
              "Name": "SSH Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_privatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:subnet/subnet-0df42857832a7eba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df42857832a7eba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568170370118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-private-subnet1"
            },
            "tags_all": {
              "Name": "DEV-private-subnet1"
            },
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:subnet/subnet-0a6eba3d1296c2ed7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6eba3d1296c2ed7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568170370118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-private-subnet2"
            },
            "tags_all": {
              "Name": "DEV-private-subnet2"
            },
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:subnet/subnet-015943f9c175dfd85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015943f9c175dfd85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568170370118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-public-subnet1"
            },
            "tags_all": {
              "Name": "DEV-public-subnet1"
            },
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:subnet/subnet-05f0e12ef4111d224",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f0e12ef4111d224",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568170370118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-public-subnet2"
            },
            "tags_all": {
              "Name": "DEV-public-subnet2"
            },
            "vpc_id": "vpc-06d033533d32d2c73"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:vpc/vpc-06d033533d32d2c73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-07a82e95b83b908eb",
            "default_route_table_id": "rtb-082612468be051c44",
            "default_security_group_id": "sg-0377eca39734f5554",
            "dhcp_options_id": "dopt-0058a1d7b5a91d15a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d033533d32d2c73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082612468be051c44",
            "owner_id": "568170370118",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}